fixed button spacing and button links

--- a/site/public/css/forum.css
+++ b/site/public/css/forum.css
@@ -608,6 +608,7 @@
 .thread_box .flex-row,
 .thread-box-full .flex-row {
     align-items: stretch;
+    justify-content: flex-end;
 }
 
 .content .thread_box_link {
